# SeriousProton2

./: .gitignore  .gitmodules  .tinyci  LICENSE  README.md  SeriousProton2.include.cmake
.github/workflows/: main.yml
android/: AndroidManifest.xml.in  SDLActivity.java.in  sdl2.patch
cmake/: FindSeriousProton2.cmake
cmake/android/: AndroidManifest.xml.in  SP2Activity.java.in
cmake/emscripten/: template.html
cmake/toolchains/: android.toolchain  emscripten.toolchain  mingw.win32.sysroot.build.sh  mingw.win32.toolchain  mingw.win64.toolchain  pi.sysroot.build.sh  pi.sysroot.multistrap.conf  pi.toolchain
cmake/toolchains/inc/: gcc.toolchain  mingw.win.base.toolchain  mingw.win.sysroot.build.sh  pi.sysroot.build.sh  (+1 more)
extlibs/: CMakeLists.txt
extlibs/Box2D/Common/: b2Settings.h
extlibs/bullet/LinearMath/: btSerializer.h
extlibs/freetype-2.9/include/freetype/config/: ftoption.h
extlibs/lua/: llex.c  lparser.c  luaconf.h
extlibs/miniz/: miniz.h
extlibs/stb/: stb_vorbis.h
include/sp2/: alignment.h  assert.h  attributes.h  engine.h  keyValueTree.h  logging.h  nonCopyable.h  pointer.h  pointerBase.h  pointerList.h  pointerVector.h  random.h  result.h  string.h  timer.h  tweak.h  tween.h  updatable.h  variant.h  window.h
src/: assert.cpp  buildinResources.cpp  engine.cpp  keyValueTree.cpp  logging.cpp  pointer.cpp  pointerBase.cpp  pointerList.cpp  random.cpp  timer.cpp  tweak.cpp  tween.cpp  updatable.cpp  window.cpp
src/audio/: audioSource.cpp  music.cpp  musicPlayer.cpp  sound.cpp
src/collision/: backend.cpp  shape.cpp
src/exception/: unhandled.cpp
src/graphics/: animation.cpp  color.cpp  font.cpp  fontManager.cpp  graphicslayer.cpp  image.cpp  meshbuilder.cpp  meshdata.cpp  opengl.cpp  renderTexture.cpp  shader.cpp  spriteAnimation.cpp  spriteManager.cpp  texture.cpp  textureAtlas.cpp  textureManager.cpp
src/io/: bufferResourceStream.cpp  cameraCapture.cpp  clipboard.cpp  directoryResourceProvider.cpp  fileSelectionDialog.cpp  filesystem.cpp  internalResourceProvider.cpp  keyValueTreeLoader.cpp  keyValueTreeSaver.cpp  keybinding.cpp  lazyLoader.cpp  resourceProvider.cpp  serializer.cpp  serialport.cpp  subprocess.cpp  usbHID.cpp  virtualTouchKeys.cpp  zipResourceProvider.cpp
src/multiplayer/: base.cpp  client.cpp  discovery.cpp  nodeRegistry.cpp  registry.cpp  replication.cpp  server.cpp
src/scene/: camera.cpp  cameraNode.cpp  node.cpp  particleEmitter.cpp  scene.cpp  tilemap.cpp  voxelmap.cpp
src/script/: bindingClass.cpp  bindingObject.cpp  callback.cpp  coroutine.cpp  environment.cpp  luaBindings.cpp  luaState.cpp  vector.cpp
src/stringutil/: base64.cpp  convert.cpp  i18n.cpp  luaTokenizer.cpp  sha1.cpp  utf8.cpp
template/: CMakeLists.txt  README.md
template/resources/gui/theme/: basic.theme.txt
template/src/: main.cpp
tests/: CMakeLists.txt
tests/resources/: test.mo  test.po
tests/src/: address.cpp  color.cpp  http.cpp  i18n.cpp  main.cpp  script.cpp  serializer.cpp  socket.cpp  string.cpp  udp.cpp
(+257 files in other folders)
